--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ option(RUN_PYTHON_TEST "run python API tests if building with python" OFF)
 option(ENABLE_GUROBI "Enable use the Gurobi optimizer" OFF)
 option(ENABLE_OPENBLAS "Do symbolic bound tighting using blas" ON) # Not available on windows
 option(CODE_COVERAGE "add code coverage" OFF)  # Available only in debug mode
+option(RUN_ASAN "compile with ASAN ON" ON)
 
 set(DEFAULT_PYTHON_VERSION "3" CACHE STRING "Default Python version 2/3")
 set(PYTHON_VERSIONS_SUPPORTED 2 3)
@@ -137,6 +138,14 @@ if (NOT MSVC)
     set(RELEASE_FLAGS ${COMPILE_FLAGS} -O3) #-Wno-deprecated
 endif()
 
+if (RUN_ASAN)
+  if(NOT MSVC)
+    set(ASAN_FLAGS -fsanitize=address -fno-omit-frame-pointer -O1)
+  endif()
+endif()
+
+
+
 if (RUN_MEMORY_TEST)
     if(NOT MSVC)
         set(MEMORY_FLAGS -fsanitize=address -fno-omit-frame-pointer -O1)
@@ -240,7 +249,7 @@ else()
 endif()
 
 target_include_directories(${MARABOU_LIB} PRIVATE ${LIBS_INCLUDES})
-target_compile_options(${MARABOU_LIB} PRIVATE ${RELEASE_FLAGS})
+target_compile_options(${MARABOU_LIB} PRIVATE ${RELEASE_FLAGS} ${ASAN_FLAGS})
 
 
 # Build marabou executable
